--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,13 +13,13 @@
 </div>
 
 <!-- Navigation -->
-<nav class="w-full flex justify-end pt-16 sm:pt-20 pb-12 sm:pb-16 pr-8">
-    <!-- Desktop menu - aligned to the right -->
-    <ul class="hidden lg:flex space-x-8 xl:space-x-16">
+<nav class="relative w-full flex justify-end pt-16 sm:pt-20 pb-12 sm:pb-16 pr-0 sm:pr-4">
+    <!-- Desktop menu - now aligned to the right -->
+    <ul class="hidden lg:flex space-x-8 xl:space-x-12">
         <li><a href="index.html#about" class="text-gray-900 hover:text-primary font-medium">About</a></li>
         <li><a href="research.html" class="text-gray-900 hover:text-primary font-medium">Research</a></li>
         <li><a href="publications.html" class="text-gray-900 hover:text-primary font-medium">Publications</a></li>
-        <li><a href="cv.html" class="text-gray-900 hover:text-primary font-medium">CV</a></li>
+        <li><a href="blog.html" class="text-gray-900 hover:text-primary font-medium">Blogs</a></li>
         <li><a href="index.html#contact" class="text-gray-900 hover:text-primary font-medium">Contact</a></li>
     </ul>
     
@@ -32,7 +32,7 @@
             <li><a href="index.html#about" class="text-xl text-gray-900 hover:text-primary font-medium">About</a></li>
             <li><a href="research.html" class="text-xl text-gray-900 hover:text-primary font-medium">Research</a></li>
             <li><a href="publications.html" class="text-xl text-gray-900 hover:text-primary font-medium">Publications</a></li>
-            <li><a href="cv.html" class="text-xl text-gray-900 hover:text-primary font-medium">CV</a></li>
+            <li><a href="blog.html" class="text-xl text-gray-900 hover:text-primary font-medium">Blogs</a></li>
             <li><a href="index.html#contact" class="text-xl text-gray-900 hover:text-primary font-medium">Contact</a></li>
         </ul>
     </div>
