--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,6 +1,7 @@
 <footer class="bg-gray-50 py-8 sm:py-12">
-    <div class="container mx-auto px-4 sm:px-6 text-center text-gray-500">
-        <p>© 2025 Minxuan Duan. All rights reserved.</p>
-        <p class="mt-2">Last updated: May 1, 2025</p>
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-gray-500">
+        <p> Page design courtesy: Michael Yao <p>
+        <p>© 2025 - <span id="current-year">2025</span> Minxuan Duan</p>
+        <p class="mt-2">Last updated: <span id="last-updated">May 1, 2025</span></p>
     </div>
 </footer>
