--- a/layouts/partials/impact.html
+++ b/layouts/partials/impact.html
@@ -5,15 +5,14 @@
         <div class="flex flex-col md:flex-row">
             <div class="w-full md:w-24 text-gray-500 font-medium mb-2 md:mb-0">Teaching</div>
             <div class="flex-1">
-                <p class="text-gray-900 mb-4">Graduate Teaching Assistant for Advanced Machine Learning (Spring 2025)</p>
-                <p class="text-gray-900 mb-4">Guest Lecturer for Introduction to Deep Learning (Fall 2024)</p>
+                <p class="text-gray-900 mb-4">Graduate Teaching Assistant for PHSC 13600 (Winter 2023)</p>
             </div>
         </div>
         <div class="flex flex-col md:flex-row">
             <div class="w-full md:w-24 text-gray-500 font-medium mb-2 md:mb-0">Service</div>
             <div class="flex-1">
-                <p class="text-gray-900 mb-4">Reviewer for NeurIPS 2025, ICML 2024</p>
-                <p class="text-gray-900 mb-4">Student Mentor for Women in ML Workshop 2024</p>
+                <p class="text-gray-900 mb-4">Reviewer for ICML 2020</p>
+                <p class="text-gray-900 mb-4">House Dean and Seminar Leader of HSYLC Summit 2021 for the Harvard College Association for U.S.-China Relations (HAUSCR)</p>
             </div>
         </div>
     </div>
