--- a/layouts/partials/changelog.html
+++ b/layouts/partials/changelog.html
@@ -47,7 +47,7 @@
                 
                 <div class="publication-item">
                     <p class="text-gray-900">
-                        <a href="https://openaccess.thecvf.com/content_CVPRW_2020/html/w6/Chakraborty_C-SURE_Shrinkage_Estimator_and_Prototype_Classifier_for_Complex-Valued_Deep_Learning_CVPRW_2020_paper.html" class="text-primary hover:underline">C-sure: Shrinkage estimator and prototype classifier for complex-valued deep learning</a>
+                        <a href="https://openaccess.thecvf.com/content_CVPRW_2020/html/w6/Chakraborty_C-SURE_Shrinkage_Estimator_and_Prototype_Classifier_for_Complex-Valued_Deep_Learning_CVPRW_2020_paper.html" class="text-primary hover:underline">C-SURE: Shrinkage estimator and prototype classifier for complex-valued deep learning</a>
                         <br>
                         Rudrasis Chakraborty, Yifei Xing, <strong>Minxuan Duan</strong>, Stella X Yu
                         <br>
