--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -5,7 +5,7 @@
             <h1 class="text-3xl sm:text-4xl font-bold text-gray-900 mb-3 sm:mb-4">
                 <span class="block">Minxuan Duan</span>
             </h1>
-            <p class="text-lg sm:text-xl text-gray-700 mb-6 sm:mb-8">Exploring the intersection of Machine Learning and Statistics to solve complex problems.</p>
+            <p class="text-lg sm:text-xl text-gray-700 mb-6 sm:mb-8"> </p>
             <a href="cv.html" class="inline-block border border-gray-300 px-5 sm:px-6 py-2 sm:py-3 text-gray-900 font-medium !rounded-button whitespace-nowrap hover:bg-gray-50 transition mb-8">Curriculum Vitae</a>
             
             <div class="lg:pr-12">
@@ -20,7 +20,7 @@
                         <ol class="list-decimal list-inside ml-5 space-y-2">
                           <li>
                             <span class="font-semibold">Mechanistic Interpretability:</span>
-                            Mathematically characterize the geometric underpinnings of pervasive phenomena in large language models.
+                            Mathematically characterize the geometric underpinnings of pervasive patterns in large language models.
                           </li>
                           <li>
                             <span class="font-semibold">Interpretable Architectures:</span>
